--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
+    "host": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   },
