--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-dsv": "^3.0.1",
+    "@types/node": "^18.11.10",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
